# smartice_ims

./: .gitignore  CLAUDE.md  MATERIAL_LIST.md  README.md  USER_LIST.md  UserCenter-Migrate-To-Supabase-Authentication.md  docker-compose.yml  ngx_materials.json  render.yaml
.github/workflows/: deploy-volcengine.yml
UserCenter/: .env.example  .gitignore  CLAUDE.md  Dockerfile  alembic.ini  pyproject.toml
UserCenter/alembic/: env.py
UserCenter/alembic/versions/: 001_add_invitation_codes.py
UserCenter/app/: __init__.py  main.py
UserCenter/app/api/: deps.py
UserCenter/app/api/v1/: router.py
UserCenter/app/api/v1/endpoints/: accounts.py  admin.py  auth.py  employees.py  invitations.py  orgs.py  roles.py
UserCenter/app/config/: database.py  settings.py
UserCenter/app/core/: exceptions.py  security.py
UserCenter/app/models/: __init__.py  account.py  base.py  employee.py  invitation.py  legacy.py  organization.py  role.py
UserCenter/app/schemas/: account.py  admin.py  auth.py  common.py  employee.py  invitation.py  organization.py  role.py
UserCenter/docs/: DATABASE.md
UserCenter/scripts/: create_tables.py  full_test.sh  migration_001_invitation_codes.sql  seed_data.py
backend/: .env.example  .gitignore  CLAUDE.md  CLOUDFLARE_MIGRATION.md  Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/models/: voice_entry.py
backend/app/routes/: voice.py
backend/app/services/: queue_service.py  qwen_extractor.py  xunfei_asr.py
frontend/: .env.production  App.tsx  CLAUDE.md  constants.ts  package-lock.json  package.json  test-supabase-connection.html  types.ts  vite.config.ts
frontend/components/: Dashboard.tsx  DesignAssistant.tsx  EntryForm.tsx  LoginPage.tsx  QueueHistoryPage.tsx  RegisterPage.tsx  Sidebar.tsx
frontend/components/ui/: AutocompleteInput.tsx  GlassCard.tsx  UpdateBanner.tsx  index.ts
frontend/contexts/: AuthContext.tsx  PreloadDataContext.tsx
frontend/docs/: SUPABASE_CONNECTION.md
frontend/public/: _headers
frontend/services/: authService.ts  dashboardService.ts  draftService.ts  geminiDesignService.ts  geminiService.ts  imageService.ts  indexedDBService.ts  inventoryService.ts  materialCorrectionService.ts  pinyinSearch.ts  receiptRecognitionService.ts  supabaseService.ts  uploadQueueService.ts  versionService.ts  voiceEntryService.ts
frontend/src/styles/: globals.css
keep-alive-worker/: index.js  wrangler.toml
nginx/: nginx.conf
plugins/smartice-inventory/.claude-plugin/: plugin.json
supabase/migrations/: 20251215_create_master_tables.sql
